# Reversi

./: CMakeLists.txt  README.md
Reversi/: flake.nix
Reversi/src/: board.hpp  game.cpp  game.hpp
src/: board.cpp  board.hpp  consts.hpp  game.cpp  game.hpp  main.cpp  opponent.cpp  opponent.hpp
